--- a/css/styles.css
+++ b/css/styles.css
@@ -45,9 +45,9 @@ p {
 }
 }
 
-/* @media (max-width 768px) {
-    svg { background-color: rgb(3, 106, 94);
-    }  */
+@media (max-width 768px) {
+    svg { background-color: rgb(3, 106, 94);}
+    } 
 
 h1 {
     color: rgb(161, 8, 199);
@@ -68,24 +68,4 @@ section-title {
 
 p {
     color: rgb(192, 255, 235);
-}
-  
-h1 {
-    position:absolute;
-    bottom: 70%;
-    left: 40%;
-    font-family:Arial, Helvetica, sans-serif;
-    color:white;
-    font-size:50px;
-    font-weight: lighter;
-    
-}
-
-
-section-title {
-    color: rgb(0, 144, 144);
-}
-
-.sec2 {
-    margin-left: 90%;
 }
